# binaryrsync

./: Makefile.am  binrsync.c  build.sh  configure.ac  test.sh  testgen.c
.github/workflows/: install-deps.sh  tests.yml
